<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Guesser</string>
    <string name="login_label">Login</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="user_profile_picture_content_description">User Profile Picture</string>
    <string name="profile_leaderboard_position">%1$d%2$s</string>
    <string name="profile_high_score">Highscore: %1$.3f</string>
    <string name="leaderboard_high_score">%1$.3f</string>
    <string name="detail_score">Score: %1$.3f</string>
    <string name="profile_game_history">Game History</string>
    <string name="game_view_button">Game View Button</string>
    <string name="game_score">SCORE: %1$.3f</string>
    <string name="twitter_username">\@%s</string>
    <string name="redacted">[ REDACTED ]</string>
    <string name="tweet_body_default">Loading tweet</string>
    <string name="losing_tweet">Losing Tweet</string>
    <string name="loss_text">Loss</string>
    <string name="tweet_unavailable">Tweet Unavailable</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="edit_username">Edit username</string>
    <string name="username">Username:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="register">Register</string>
    <string name="use_twitter_profile">Use Twitter Profile</string>
    <string name="use_twitter_username">Use Twitter Username</string>
    <string name="enable_filter">Enable Tweet Sensitivity filter</string>
    <string name="content_sensitivity_filter_on">Content Sensitivity Filter On</string>

</resources>